==> tongwenfei/YX-TMP-CT4S-UCOSIII-F4/FreeModbus/port/portserial.c <==
/*
 * FreeModbus Libary: BARE Port
 * Copyright (C) 2006 Christian Walter <wolti@sil.at>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 *
 * File: $Id: portserial.c,v 1.1 2006/08/22 21:35:13 wolti Exp $
 */

#include "port.h"

/* ----------------------- Modbus includes ----------------------------------*/
#include "mb.h"
#include "mbport.h"
#include "os.h"
//
//添加外部头文件
//
#include "stm32f4xx_usart.h"

/* ----------------------- static functions ---------------------------------*/
void prvvUARTTxReadyISR( void );
void prvvUARTRxISR( void );

/* ----------------------- Start implementation -----------------------------*/
void
vMBPortSerialEnable( BOOL xRxEnable, BOOL xTxEnable )
{
    /* If xRXEnable enable serial receive interrupts. If xTxENable enable
     * transmitter empty interrupts.
     */
	
	if (xRxEnable)  //接收使能
	{
		USART_ITConfig(USART1, USART_IT_RXNE, ENABLE);  //使能接收中断
//		GPIO_ResetBits(GPIOG, GPIO_Pin_8);  //接收
	}
	else  //失能
	{
		USART_ITConfig(USART1, USART_IT_RXNE, DISABLE);  //失能接收中断
//		GPIO_SetBits(GPIOG, GPIO_Pin_8);  //恢复发送
	}
	
	if (xTxEnable)  //发送使能
	{
		USART_ITConfig(USART1, USART_IT_TXE, ENABLE);  //使能
//		GPIO_SetBits(GPIOG, GPIO_Pin_8);  //发送
	}
	else  //失能
	{
		USART_ITConfig(USART1, USART_IT_TXE, DISABLE);  //失能
//		GPIO_ResetBits(GPIOG, GPIO_Pin_8);  //设置接收
	}
}

BOOL
xMBPortSerialInit( UCHAR ucPORT, ULONG ulBaudRate, UCHAR ucDataBits, eMBParity eParity )
{
//    return FALSE;
	
//	GPIO_InitTypeDef  GPIO_InitStructure;
//	USART_InitTypeDef USART_InitStructure;
//	NVIC_InitTypeDef  NVIC_InitStructure;
	
	(void)ucPORT;  //不修改串口号
	(void)ucDataBits;  //不修改数据位长度
	(void)eParity;  //不修改检验格式
	uart_init(115200);
//	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA | RCC_AHB1Periph_GPIOG, ENABLE);
//	RCC_APB1PeriphClockCmd(RCC_APB2Periph_USART1, ENABLE);
//	
//	//
//	//管脚复用
//	//
//	GPIO_PinAFConfig(GPIOA, GPIO_PinSource2, GPIO_AF_USART1);
//	GPIO_PinAFConfig(GPIOA, GPIO_PinSource3, GPIO_AF_USART1);
//	
//	//
//	//发送管脚 PA.02
//	//接收管脚 PA.03
//	//
//	GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_2 | GPIO_Pin_3;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
//	GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_AF;
//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
//	GPIO_Init(GPIOA, &GPIO_InitStructure);
//	
//	//
//	//485芯片发送接收控制管脚
//	//
//	GPIO_InitStructure.GPIO_Pin   = GPIO_Pin_8;
//	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
//	GPIO_InitStructure.GPIO_Mode  = GPIO_Mode_OUT;
//	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
//	GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;
//	GPIO_Init(GPIOG, &GPIO_InitStructure);
//	
//	//
//	//配置串口参数
//	//
//	USART_InitStructure.USART_BaudRate            = ulBaudRate;  //只修改波特率
//	USART_InitStructure.USART_WordLength          = USART_WordLength_8b;
//	USART_InitStructure.USART_StopBits            = USART_StopBits_1;
//	USART_InitStructure.USART_Parity              = USART_Parity_No;
//	USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
//	USART_InitStructure.USART_Parity              = USART_Mode_Rx | USART_Mode_Tx;
//	USART_Init(USART1, &USART_InitStructure);
//	//
//	//使能串口
//	//
//	USART_Cmd(USART1, ENABLE);
	
	//
	//配置中断优先级
	//
//	NVIC_InitStructure.NVIC_IRQChannel                   = USART1_IRQn;
//	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
//	NVIC_InitStructure.NVIC_IRQChannelSubPriority        = 1;
//	NVIC_InitStructure.NVIC_IRQChannelCmd                = ENABLE;
//	NVIC_Init(&NVIC_InitStructure);
	
	return TRUE;
}

BOOL
xMBPortSerialPutByte( CHAR ucByte )
{
    /* Put a byte in the UARTs transmit buffer. This function is called
     * by the protocol stack if pxMBFrameCBTransmitterEmpty( ) has been
     * called. */
    
	USART_SendData(USART1, ucByte);  //发送一个字节
	
	return TRUE;
}

BOOL
xMBPortSerialGetByte( CHAR * pucByte )
{
    /* Return the byte in the UARTs receive buffer. This function is called
     * by the protocol stack after pxMBFrameCBByteReceived( ) has been called.
     */
    
	*pucByte = USART_ReceiveData(USART1);  //接收一个字节
	
	return TRUE;
}

/* Create an interrupt handler for the transmit buffer empty interrupt
 * (or an equivalent) for your target processor. This function should then
 * call pxMBFrameCBTransmitterEmpty( ) which tells the protocol stack that
 * a new character can be sent. The protocol stack will then call 
 * xMBPortSerialPutByte( ) to send the character.
 */
void prvvUARTTxReadyISR( void )
{
    pxMBFrameCBTransmitterEmpty(  );
}

/* Create an interrupt handler for the receive interrupt for your target
 * processor. This function should then call pxMBFrameCBByteReceived( ). The
 * protocol stack will then call xMBPortSerialGetByte( ) to retrieve the
 * character.
 */
void prvvUARTRxISR( void )
{
    pxMBFrameCBByteReceived(  );
}

/**
  *****************************************************************************
  * @Name   : 串口2中断服务函数
  *
  * @Brief  : none
  *
  * @Input  : none
  *
  * @Output : none
  *
  * @Return : none
  *****************************************************************************
**/
void USART1_IRQHandler(void)
{
CPU_SR_ALLOC();


    CPU_CRITICAL_ENTER();	
  if (USART_GetITStatus(USART1, USART_IT_RXNE) == SET)  //接收中断
	{
		prvvUARTRxISR();
		USART_ClearITPendingBit(USART1, USART_IT_RXNE);
	}
	
	if (USART_GetITStatus(USART1, USART_IT_TXE) == SET)  //发送中断
	{
		prvvUARTTxReadyISR();
		USART_ClearITPendingBit(USART1, USART_IT_TXE);
	}
  CPU_CRITICAL_EXIT();	//退出临界区	
}
